<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:gravity="center"
        android:layout_marginBottom="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        android:gravity="center"
        android:layout_marginBottom="15dp"/>
    <EditText
        android:id="@+id/EditText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"/>
    <EditText
        android:id="@+id/EditText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"/>
    <Button
        android:id="@+id/NewButton"

        android:text="@string/textButton"
        android:textColor="#FFF9A8"
        android:textSize="30sp"

        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape2"
        android:shadowColor="#A80202"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />
    <Button
        android:id="@+id/NewButton3"

        android:text="@string/textButton3"
        android:textColor="#FFF9A8"
        android:textSize="30sp"

        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A80202"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />
    <Button android:id="@+id/ex3Button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Go to ex3"
        style="@style/pink"
        android:layout_marginTop="10dp"/>
    <Button android:id="@+id/ButtonList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Go to list"
        style="@style/pink"/>
    <Button android:id="@+id/ex10Button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Go to ex10"
        style="@style/pink"/>
    <Button android:id="@+id/sqlActButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="SQL"
        style="@style/pink"/>

</LinearLayout>
